--- a/styles.css
+++ b/styles.css
@@ -118,3 +118,12 @@ p,.track-number {
     overflow-y: auto;    
     height: calc(100vh - 70px); 
 }
+
+footer {
+  
+  width:100vw;
+  background-color: #e2c8f8; /* deep purple */
+  color: #400868;           /* soft lavender text */
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+}
